--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import the classes and functions we need."
+    "Importing the NonPredictive class from the nonpredictive module:"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add features and options to the model."
+    "Instanciate the model and add the features:"
    ]
   },
   {
@@ -76,14 +76,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read leads from a csv file and add lambda values to a new csv file."
+    "Read leads from a csv file and add lambda values to a new csv file:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['50K - 100K', 'Technology', '$300K - $400K', 81.43]\n",
+      "['50K - 100K', 'Retail', '100k - $200K', 50.0]\n",
+      "['Up to 50K', 'Real State', '50k - $100K', 23.81]\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "\n",
@@ -101,14 +111,16 @@
     "        for row in csv_reader:\n",
     "            lead = dict(zip(headers, row))\n",
     "            lambda_value = model.compute_lambda(lead)\n",
-    "            csv_writer.writerow(row + [lambda_value])\n"
+    "            new_row = row + [lambda_value]\n",
+    "            print(new_row)\n",
+    "            csv_writer.writerow(new_row)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute lambda values for a single lead."
+    "Compute lambda values for a single lead:"
    ]
   },
   {
