--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -95,7 +95,7 @@
     }
    ],
    "source": [
-    "import csv\n",
+    "import csv # or you can just use pandas instead\n",
     "\n",
     "with open('leads.csv', 'r') as file:\n",
     "    if file.read(3) == b'\\xef\\xbb\\xbf':\n",
