--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -4,12 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing the NonPredictive class from the nonpredictive module:"
+    "# Usage Example\n",
+    "\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Importing the NonPredictive class from the nonpredictive module:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +33,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instanciate the model and add the features:"
+    "## Instanciate the model and add the features:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +54,7 @@
     "        (\"More than 200K\",100),\n",
     "    ]\n",
     ")\n",
-    "model.add_features([feature_a])\n",
+    "\n",
     "feature_b = Feature(\n",
     "    name=\"Industry\",\n",
     "    weight=0.25,\n",
@@ -56,7 +66,7 @@
     "        (\"Health\",100),\n",
     "    ]\n",
     ")\n",
-    "model.add_features([feature_b])\n",
+    "\n",
     "feature_c = Feature(\n",
     "    name=\"Mkt Investment\",\n",
     "    weight=1,\n",
@@ -69,19 +79,19 @@
     "        (\"More than $400K\",100),\n",
     "    ]\n",
     ")\n",
-    "model.add_features([feature_c])"
+    "model.add_features([feature_a, feature_b, feature_c])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read leads from a csv file and add lambda values to a new csv file:"
+    "## Read leads from a csv file and add lambda values to a new csv file:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -120,26 +130,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute lambda values for a single lead:"
+    "## Compute lambda values for a single lead:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "23.81"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda_value = model.compute_lambda(lead)\n",
+    "lambda_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Remove features"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.81\n"
+      "{'Monthly Users': {'weight': 0.5, 'normalized_weight': 0.44}, 'Industry': {'weight': 0.25, 'normalized_weight': 0.22}, 'Mkt Investment': {'weight': 1.0, 'normalized_weight': 0.87}}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "{'Monthly Users': {'weight': 0.5, 'normalized_weight': 0.44},\n 'Industry': {'weight': 0.25, 'normalized_weight': 0.22},\n 'Mkt Investment': {'weight': 1.0, 'normalized_weight': 0.87}}"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "lambda_value = model.compute_lambda(lead)\n",
-    "print(lambda_value)"
-   ]
+    "model.describe_features()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
