restrucre glsm fodlers and update docs and imports

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -10,23 +10,23 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Importing the NonPredictive class from the nonpredictive module:"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Importing the NonPredictive class from the non-predictive module:"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
-    "from glsm.non_predictive import NonPredictive\n",
-    "from glsm.features import Feature"
+    "from glsm.non_predictive.model import NonPredictive\n",
+    "from glsm.non_predictive.features import Feature"
    ]
   },
   {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,22 +48,26 @@
     "    name=\"Monthly Users\",\n",
     "    weight=0.5,\n",
     "    points_map=[\n",
-    "        (\"Up to 50K\",00),\n",
-    "        (\"50K - 100K\",50),\n",
-    "        (\"100K - 200K\",70),\n",
-    "        (\"More than 200K\",100),\n",
+    "        [\"Up to 50K\",0],\n",
+    "        [\"50K - 100K\",50],\n",
+    "        [\"100K - 200K\",75],\n",
+    "        [\"More than 200K\",100],\n",
     "    ]\n",
     ")\n",
-    "\n",
     "feature_b = Feature(\n",
     "    name=\"Industry\",\n",
     "    weight=0.25,\n",
     "    points_map=[\n",
-    "        (\"Technology\",70),\n",
-    "        (\"Real State\",20),\n",
-    "        (\"Retail\",50),\n",
-    "        (\"Education\",50),\n",
-    "        (\"Health\",100),\n",
+    "        [\"Other\",50 - (50/5)*5], # 0\n",
+    "        [\"Agriculture\",50 - (50/5)*4],\n",
+    "        [\"Transportation\",50 - (50/5)*3],\n",
+    "        [\"Healthcare\",50 - (50/5)*2],\n",
+    "        [\"Manufacturing\",50 - (50/5)],\n",
+    "        [\"Education\",50],\n",
+    "        [\"Finance\",50],\n",
+    "        [\"Technology\",50],\n",
+    "        [\"Retail\",50 + (50/2)],\n",
+    "        [\"Telecom\",50 + (50/2)*2], # 100\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -71,12 +75,12 @@
     "    name=\"Mkt Investment\",\n",
     "    weight=1,\n",
     "    points_map=[\n",
-    "        (\"Up to $50K\",0),\n",
-    "        (\"50k - $100K\",30),\n",
-    "        (\"100k - $200K\",50),\n",
-    "        (\"$200K - $300K\",70),\n",
-    "        (\"$300K - $400K\",90),\n",
-    "        (\"More than $400K\",100),\n",
+    "        [\"Up to $50K\",'0'],\n",
+    "        [\"50k - $100K\",30],\n",
+    "        [\"100k - $200K\",50],\n",
+    "        [\"$200K - $300K\",70],\n",
+    "        [\"$300K - $400K\",90],\n",
+    "        [\"More than $400K\",100],\n",
     "    ]\n",
     ")\n",
     "model.add_features([feature_a, feature_b, feature_c])"
@@ -86,44 +90,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read leads from a csv file and add lambda values to a new csv file:"
+    "## Read leads from a csv file and compute the lead score:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['50K - 100K', 'Technology', '$300K - $400K', 81.43]\n",
-      "['50K - 100K', 'Retail', '100k - $200K', 50.0]\n",
-      "['Up to 50K', 'Real State', '50k - $100K', 23.81]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Monthly Users</th>\n",
+       "      <th>Industry</th>\n",
+       "      <th>Mkt Investment</th>\n",
+       "      <th>lambda</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50K - 100K</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>$300K - $400K</td>\n",
+       "      <td>80.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50K - 100K</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>100k - $200K</td>\n",
+       "      <td>51.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Up to 50K</td>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>50k - $100K</td>\n",
+       "      <td>23.33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Monthly Users     Industry Mkt Investment  lambda\n",
+       "0    50K - 100K   Technology  $300K - $400K   80.48\n",
+       "1    50K - 100K       Retail   100k - $200K   51.19\n",
+       "2     Up to 50K  Agriculture    50k - $100K   23.33"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import csv # or you can just use pandas instead\n",
+    "# or you can just use pandas instead\n",
+    "import pandas as pd\n",
     "\n",
-    "with open('leads.csv', 'r') as file:\n",
-    "    if file.read(3) == b'\\xef\\xbb\\xbf':\n",
-    "        file.seek(3)\n",
-    "    csv_reader = csv.reader(file)\n",
-    "    headers = next(csv_reader)\n",
-    "\n",
-    "    # New csv file adding lambda values\n",
-    "    with open('leads_with_lambda.csv', 'w', newline='') as new_file:\n",
-    "        csv_writer = csv.writer(new_file)\n",
-    "        csv_writer.writerow(headers + ['lambda'])\n",
-    "\n",
-    "        for row in csv_reader:\n",
-    "            lead = dict(zip(headers, row))\n",
-    "            lambda_value = model.compute_lambda(lead)\n",
-    "            new_row = row + [lambda_value]\n",
-    "            print(new_row)\n",
-    "            csv_writer.writerow(new_row)\n"
+    "df = pd.read_csv('leads.csv')\n",
+    "df['lambda'] = df.apply(\n",
+    "    lambda row: model.compute_lambda(row.to_dict()),\n",
+    "    axis=1\n",
+    ")\n",
+    "df"
    ]
   },
   {
@@ -135,58 +184,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "23.81"
+      "text/plain": [
+       "80.48"
+      ]
      },
-     "execution_count": 14,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "lead = { \n",
+    "        \"Monthly Users\": \"50K - 100K\",\n",
+    "        \"Industry\": \"Technology\",\n",
+    "        \"Mkt Investment\": \"$300K - $400K\",\n",
+    "    }\n",
+    "    \n",
     "lambda_value = model.compute_lambda(lead)\n",
     "lambda_value"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
-   "source": [
-    "## Remove features"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Removing features"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 189,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model.remove_features(['Mkt Investment'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Monthly Users': {'weight': 0.5, 'normalized_weight': 0.44}, 'Industry': {'weight': 0.25, 'normalized_weight': 0.22}, 'Mkt Investment': {'weight': 1.0, 'normalized_weight': 0.87}}\n"
+      "{'Monthly Users': {'weight': 0.5, 'normalized_weight': 0.89}, 'Industry': {'weight': 0.25, 'normalized_weight': 0.45}}\n"
      ]
     },
     {
      "data": {
-      "text/plain": "{'Monthly Users': {'weight': 0.5, 'normalized_weight': 0.44},\n 'Industry': {'weight': 0.25, 'normalized_weight': 0.22},\n 'Mkt Investment': {'weight': 1.0, 'normalized_weight': 0.87}}"
+      "text/plain": [
+       "{'Monthly Users': {'weight': 0.5, 'normalized_weight': 0.89},\n",
+       " 'Industry': {'weight': 0.25, 'normalized_weight': 0.45}}"
+      ]
      },
-     "execution_count": 15,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model.describe_features()"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute new lambda after removing a feature:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Monthly Users</th>\n",
+       "      <th>Industry</th>\n",
+       "      <th>Mkt Investment</th>\n",
+       "      <th>lambda</th>\n",
+       "      <th>new_lambda</th>\n",
+       "      <th>delta_percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>50K - 100K</td>\n",
+       "      <td>Technology</td>\n",
+       "      <td>$300K - $400K</td>\n",
+       "      <td>80.48</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>-37.872763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50K - 100K</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>100k - $200K</td>\n",
+       "      <td>51.19</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>7.442860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Up to 50K</td>\n",
+       "      <td>Agriculture</td>\n",
+       "      <td>50k - $100K</td>\n",
+       "      <td>23.33</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-91.427347</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Monthly Users     Industry Mkt Investment  lambda  new_lambda  delta_percent\n",
+       "0    50K - 100K   Technology  $300K - $400K   80.48        50.0     -37.872763\n",
+       "1    50K - 100K       Retail   100k - $200K   51.19        55.0       7.442860\n",
+       "2     Up to 50K  Agriculture    50k - $100K   23.33         2.0     -91.427347"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df with both lambdas and delta_percent\n",
+    "df['new_lambda'] = df.apply(\n",
+    "    lambda row: model.compute_lambda(row.to_dict()),\n",
+    "    axis=1\n",
+    ")\n",
+    "\n",
+    "df['delta_percent'] = (df['new_lambda'] / df['lambda'] - 1)*100\n",
+    "\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(sum( # proof of normalized weights sum to 1\n",
+    "    [i.normalized_weight**2 for i in model.features]),\n",
+    "    model.round_decimals \n",
+    ") "
+   ]
   }
  ],
  "metadata": {
