--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -19,8 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -38,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +162,7 @@
        "2     Up to 50K  Agriculture    50k - $100K   23.33"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +197,7 @@
        "80.48"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,13 +214,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
@@ -227,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -238,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -247,6 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'Monthly Users': {'weight': 0.5, 'normalized_weight': 0.89}}\n",
       "{'Monthly Users': {'weight': 0.5, 'normalized_weight': 0.89}, 'Industry': {'weight': 0.25, 'normalized_weight': 0.45}}\n"
      ]
     },
@@ -257,7 +255,7 @@
        " 'Industry': {'weight': 0.25, 'normalized_weight': 0.45}}"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -348,7 +346,7 @@
        "2     Up to 50K  Agriculture    50k - $100K   23.33         2.0     -91.427347"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -378,7 +376,7 @@
        "1.0"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
