refactor names and fix code smells

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -19,31 +19,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import sys\n",
+    "import pandas as pd\n",
     "sys.path.append('..')\n",
     "from glsm.non_predictive.model import NonPredictive\n",
     "from glsm.non_predictive.features import Feature"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-09T19:37:54.299837Z",
+     "end_time": "2023-04-09T19:37:54.833030Z"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Instanciate the model and add the features:"
-   ]
+    "## Instance the model and add the features:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-04-09T19:37:54.698031Z",
+     "end_time": "2023-04-09T19:37:54.842030Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model = NonPredictive()\n",
@@ -56,7 +66,12 @@
     "        [\"50K - 100K\",50],\n",
     "        [\"100K - 200K\",75],\n",
     "        [\"More than 200K\",100],\n",
-    "    ]\n",
+    "    ],\n",
+    "    options_df=pd.DataFrame({\n",
+    "        'label': ['Up to 50K', '50K - 100K', '100K - 200K', 'More than 200K'],\n",
+    "        'is_ICP': [False, True, False, False],\n",
+    "        'points': [0, 0, 0, 0]\n",
+    "    })\n",
     ")\n",
     "feature_b = Feature(\n",
     "    name=\"Industry\",\n",
@@ -72,7 +87,13 @@
     "        [\"Technology\",50],\n",
     "        [\"Retail\",50 + (50/2)],\n",
     "        [\"Telecom\",50 + (50/2)*2], # 100\n",
-    "    ]\n",
+    "    ],\n",
+    "    options_df=pd.DataFrame({\n",
+    "        'label': ['Other', 'Agriculture', 'Transportation', 'Healthcare', 'Manufacturing',\n",
+    "                  'Education', 'Finance', 'Technology', 'Retail', 'Telecom'],\n",
+    "        'is_ICP': [False, False, False, False, False, False, False, False, False, False],\n",
+    "        'points': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+    "    })\n",
     ")\n",
     "\n",
     "feature_c = Feature(\n",
@@ -85,7 +106,12 @@
     "        [\"$200K - $300K\",70],\n",
     "        [\"$300K - $400K\",90],\n",
     "        [\"More than $400K\",100],\n",
-    "    ]\n",
+    "    ],\n",
+    "    options_df=pd.DataFrame({\n",
+    "        'label': ['Up to $50K', '50k - $100K', '100k - $200K', '$200K - $300K', '$300K - $400K', 'More than $400K'],\n",
+    "        'is_ICP': [False, False, False, False, False, False],\n",
+    "        'points': [0, 0, 0, 0, 0, 0]\n",
+    "    })\n",
     ")\n",
     "model.add_features([feature_a, feature_b, feature_c])"
    ]
@@ -100,67 +126,17 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-04-09T19:37:54.711030Z",
+     "end_time": "2023-04-09T19:37:54.846028Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Monthly Users</th>\n",
-       "      <th>Industry</th>\n",
-       "      <th>Mkt Investment</th>\n",
-       "      <th>lambda</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>50K - 100K</td>\n",
-       "      <td>Technology</td>\n",
-       "      <td>$300K - $400K</td>\n",
-       "      <td>80.48</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>50K - 100K</td>\n",
-       "      <td>Retail</td>\n",
-       "      <td>100k - $200K</td>\n",
-       "      <td>51.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Up to 50K</td>\n",
-       "      <td>Agriculture</td>\n",
-       "      <td>50k - $100K</td>\n",
-       "      <td>23.33</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Monthly Users     Industry Mkt Investment  lambda\n",
-       "0    50K - 100K   Technology  $300K - $400K   80.48\n",
-       "1    50K - 100K       Retail   100k - $200K   51.19\n",
-       "2     Up to 50K  Agriculture    50k - $100K   23.33"
-      ]
+      "text/plain": "  Monthly Users     Industry Mkt Investment  lambda\n0    50K - 100K   Technology  $300K - $400K   80.48\n1    50K - 100K       Retail   100k - $200K   51.19\n2     Up to 50K  Agriculture    50k - $100K   23.33",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Monthly Users</th>\n      <th>Industry</th>\n      <th>Mkt Investment</th>\n      <th>lambda</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50K - 100K</td>\n      <td>Technology</td>\n      <td>$300K - $400K</td>\n      <td>80.48</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>50K - 100K</td>\n      <td>Retail</td>\n      <td>100k - $200K</td>\n      <td>51.19</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Up to 50K</td>\n      <td>Agriculture</td>\n      <td>50k - $100K</td>\n      <td>23.33</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 3,
      "metadata": {},
@@ -189,13 +165,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2023-04-09T19:37:54.741030Z",
+     "end_time": "2023-04-09T19:37:54.847029Z"
+    }
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "80.48"
-      ]
+      "text/plain": "80.48"
      },
      "execution_count": 4,
      "metadata": {},
@@ -226,7 +205,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-09T19:37:54.758030Z",
+     "end_time": "2023-04-09T19:37:54.863028Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -237,7 +220,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-09T19:37:54.772030Z",
+     "end_time": "2023-04-09T19:37:54.864028Z"
+    }
    },
    "outputs": [
     {
@@ -250,10 +237,7 @@
     },
     {
      "data": {
-      "text/plain": [
-       "{'Monthly Users': {'weight': 0.5, 'normalized_weight': 0.89},\n",
-       " 'Industry': {'weight': 0.25, 'normalized_weight': 0.45}}"
-      ]
+      "text/plain": "{'Monthly Users': {'weight': 0.5, 'normalized_weight': 0.89},\n 'Industry': {'weight': 0.25, 'normalized_weight': 0.45}}"
      },
      "execution_count": 6,
      "metadata": {},
@@ -275,76 +259,17 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-09T19:37:54.790029Z",
+     "end_time": "2023-04-09T19:37:54.865031Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Monthly Users</th>\n",
-       "      <th>Industry</th>\n",
-       "      <th>Mkt Investment</th>\n",
-       "      <th>lambda</th>\n",
-       "      <th>new_lambda</th>\n",
-       "      <th>delta_percent</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>50K - 100K</td>\n",
-       "      <td>Technology</td>\n",
-       "      <td>$300K - $400K</td>\n",
-       "      <td>80.48</td>\n",
-       "      <td>50.0</td>\n",
-       "      <td>-37.872763</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>50K - 100K</td>\n",
-       "      <td>Retail</td>\n",
-       "      <td>100k - $200K</td>\n",
-       "      <td>51.19</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>7.442860</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Up to 50K</td>\n",
-       "      <td>Agriculture</td>\n",
-       "      <td>50k - $100K</td>\n",
-       "      <td>23.33</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-91.427347</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Monthly Users     Industry Mkt Investment  lambda  new_lambda  delta_percent\n",
-       "0    50K - 100K   Technology  $300K - $400K   80.48        50.0     -37.872763\n",
-       "1    50K - 100K       Retail   100k - $200K   51.19        55.0       7.442860\n",
-       "2     Up to 50K  Agriculture    50k - $100K   23.33         2.0     -91.427347"
-      ]
+      "text/plain": "  Monthly Users     Industry Mkt Investment  lambda  new_lambda  delta_percent\n0    50K - 100K   Technology  $300K - $400K   80.48        50.0     -37.872763\n1    50K - 100K       Retail   100k - $200K   51.19        55.0       7.442860\n2     Up to 50K  Agriculture    50k - $100K   23.33         2.0     -91.427347",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Monthly Users</th>\n      <th>Industry</th>\n      <th>Mkt Investment</th>\n      <th>lambda</th>\n      <th>new_lambda</th>\n      <th>delta_percent</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>50K - 100K</td>\n      <td>Technology</td>\n      <td>$300K - $400K</td>\n      <td>80.48</td>\n      <td>50.0</td>\n      <td>-37.872763</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>50K - 100K</td>\n      <td>Retail</td>\n      <td>100k - $200K</td>\n      <td>51.19</td>\n      <td>55.0</td>\n      <td>7.442860</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Up to 50K</td>\n      <td>Agriculture</td>\n      <td>50k - $100K</td>\n      <td>23.33</td>\n      <td>2.0</td>\n      <td>-91.427347</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "execution_count": 7,
      "metadata": {},
@@ -367,14 +292,16 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-09T19:37:54.804029Z",
+     "end_time": "2023-04-09T19:37:54.865031Z"
+    }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "1.0"
-      ]
+      "text/plain": "1.0"
      },
      "execution_count": 8,
      "metadata": {},
